--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -13,19 +13,20 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         >
-        <EditText
 
+        <EditText
             android:id="@+id/search_product_name"
             android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:hint="Product Name"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:background="@android:color/white"
-            android:layout_marginStart="5dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:background="@android:color/white"
+            android:hint="Product Name"
             android:padding="9dp"
             android:textColorHint="@color/colorPrimaryDark"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="18dp"
+            android:textStyle="bold"
 
             />
         <Button
@@ -48,7 +49,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/r5"
-
         >
 
     </androidx.recyclerview.widget.RecyclerView>
