user login page, using username and not the cellphone number SUCCESS

--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -44,12 +44,12 @@
             />
 
     </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/r5"
-        >
+        android:layout_below="@+id/r5">
 
     </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
