--- a/app/src/main/res/layout/activity_admin_new_orders.xml
+++ b/app/src/main/res/layout/activity_admin_new_orders.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminNewOrdersActivity">
+    tools:context=".AdminNewOrdersActivity"
+    android:background="@color/white">
     <RelativeLayout
         android:id="@+id/r2"
         android:layout_width="match_parent"
