--- a/app/src/main/res/layout/activity_admin_user_products.xml
+++ b/app/src/main/res/layout/activity_admin_user_products.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminUserProductsActivity">
+    tools:context=".AdminUserProductsActivity"
+    android:background="@color/white">
     <RelativeLayout
         android:id="@+id/r3"
         android:layout_width="match_parent"
