--- a/app/src/main/res/layout/activity_confirm_final_order.xml
+++ b/app/src/main/res/layout/activity_confirm_final_order.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConfirmFinalOrderActivity">
+    tools:context=".ConfirmFinalOrderActivity"
+    android:background="@color/white">
     <TextView
         android:id="@+id/txt"
         android:layout_width="match_parent"
@@ -17,48 +18,55 @@
         android:textStyle="bold"
 
         />
+
     <EditText
         android:id="@+id/shippment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:hint="Your Name"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorSecondary"/>
 
-        />
     <EditText
         android:id="@+id/shippment_phone_number"
-        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/shippment_name"
-        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:hint="Your Phone Number"
-        />
+        android:inputType="number"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorSecondary"/>
+
     <EditText
         android:id="@+id/shippment_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/shippment_phone_number"
-        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:hint="Your Home Address"
-        />
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorSecondary"/>
+
     <EditText
         android:id="@+id/shippment_city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/shippment_address"
-        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
         android:hint="Your City Name"
-        />
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorSecondary"/>
     <Button
         android:id="@+id/confirm_final_order_btn"
         android:layout_width="match_parent"
