--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".HomeActivity"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:background="@color/white">
 
 
     <include
