--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchProductsActivity">
+    tools:context=".SearchProductsActivity"
+    android:background="@color/white">
     <RelativeLayout
         android:id="@+id/r5"
         android:layout_width="match_parent"
