--- a/app/src/main/res/layout/activity_settins.xml
+++ b/app/src/main/res/layout/activity_settins.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettinsActivity">
+    tools:context=".SettinsActivity"
+    android:background="@color/white">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_settings"
         android:layout_width="match_parent"
@@ -80,10 +81,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_image_change_btn"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         android:hint="Phone Number..."
-        android:layout_margin="15dp"
-        android:padding="10dp"
-        />
+        android:textColor="@color/colorPrimary"
+        android:padding="10dp" />
 
     <EditText
         android:id="@+id/settings_full_name"
@@ -92,6 +96,7 @@
         android:layout_below="@+id/settings_phone_number"
         android:hint="Full Name..."
         android:layout_margin="15dp"
+        android:textColor="@color/colorPrimary"
         android:padding="10dp"
         />
 
@@ -102,6 +107,7 @@
         android:layout_below="@+id/settings_full_name"
         android:hint="Address..."
         android:layout_margin="15dp"
+        android:textColor="@color/colorPrimary"
         android:padding="10dp"
         />
 </RelativeLayout>
