--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -17,44 +17,46 @@
             android:id="@+id/product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10sp"
             android:text="Product Name"
             android:textAlignment="center"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            />
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/product_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_below="@+id/product_name"
-            android:scaleType="centerCrop"
             android:layout_marginTop="2dp"
-            />
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/product_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_image"
+            android:padding="10sp"
             android:text="Product Price"
             android:textAlignment="center"
-            android:textSize="18dp"
-            android:textColor="@color/colorPrimaryDark"
-            />
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/product_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_price"
-            android:text="Product Description"
             android:layout_marginTop="2dp"
+            android:padding="10sp"
+            android:text="Product Description"
             android:textAlignment="center"
-            android:textSize="16dp"
-            android:textColor="@color/colorPrimaryDark"
-            />
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textSize="16dp" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
